12-Apr-2016 Fixes #220. Removed unused argument 'validatePackageLocations' used during reading package definition files. To avoid function ambiguity, one of the Bam.Core.PackageDefinition.Read functions has been renamed to ReadInternal and made private. To perform a read on an existing PackageDefinition object, call the Read() function (no arguments required).

12-Apr-2016 Fixes #219. The minimum version of Bam assemblies specified by package definition files are now only checked for just those packages used to compile into an assembly. Previously, all packages found on all inspected repositories were checked, which could result in false positives.

11-Apr-2016 ======== Version 1.0.2 beta 1 Release ========

11-Apr-2016 Fixes #209. Xcode generation now supports identifying .tbd files, new in Xcode 7, which are text based dylib definition files. The LinkPrebuiltLibrary exercises this when targeting Xcode7.

11-Apr-2016 Fixes #218. Removed unused code from Bam.Core.TimingProfileUtilities that had been identified by Coverity scan.

11-Apr-2016 Fixes #217. Fetching the rank of a ModuleCollection from the Bam.Core.DependencyGraph used a comparison for a default System.Collections.Generic.Dictionary<int, ModuleCollection> which Coverity scan identified as logically dead code (equivalent to null, even though that doesn't compile), suggesting all ModuleCollections should have a valid rank index (which isn't true). Regardless, the code has been tidied up to eliminate ambiguity.

11-Apr-2016 Fixes #216. In Bam.Core.Settings.InitializeAllInterfaces, refactor so that cached interfaces for each module type are both stored and extracted under a synchronization lock. Coverity scan previously identified that a potential data race existed, as the indexer was used outside of the lock.
