@@ -74,7 +74,7 @@ namespace C
                 var osxLinker = settings as C.ICommonLinkerSettingsOSX;
                 if (null != osxLinker)
                 {
-                    osxLinker.InstallName = this.CreateTokenizedString("@executable_path/@filename($(LinkOutput))");
+                    osxLinker.InstallName = this.CreateTokenizedString("@rpath/@filename($(LinkOutput))");
                 }
             });
         }
