@@ -1,3 +1,5 @@
+12-Apr-2016 Fixes #221. OSX DynamicLibraries and Plugins now default to using an install name of @rpath/libname, rather than @executable_path/libname. OSX applications (not dylibs nor plugins) now have a default RPath of @executable_path, to balance out the install name change for basic applications. Using @rpath is a more flexible method for being able to identify where dylibs have been installed.
+
 12-Apr-2016 Fixes #220. Removed unused argument 'validatePackageLocations' used during reading package definition files. To avoid function ambiguity, one of the Bam.Core.PackageDefinition.Read functions has been renamed to ReadInternal and made private. To perform a read on an existing PackageDefinition object, call the Read() function (no arguments required).
 
 12-Apr-2016 Fixes #219. The minimum version of Bam assemblies specified by package definition files are now only checked for just those packages used to compile into an assembly. Previously, all packages found on all inspected repositories were checked, which could result in false positives.
